--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,8 @@
             "aot": true,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/api"
             ],
             "styles": [
               "src/styles.scss"
@@ -68,7 +69,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "EPL:build"
+            "browserTarget": "EPL:build",
+            "port": 8080
           },
           "configurations": {
             "production": {
